change to record class