@@ -84,26 +84,30 @@ public class TotalSupportTreeTest {
         assertEquals(3, ttree.getSupport(items[4]));
         assertEquals(7, ttree.getSupport(items[5]));
 
-        List<ItemSet> results = ttree.stream().collect(Collectors.toList());
+        List<ItemSet> results = ttree.stream().toList();
+        for (var itemSet : results) {
+            System.out.println(itemSet);
+        }
+
         assertEquals(8, results.size());
         
-        assertEquals(8, results.get(0).support);
-        assertEquals(1, results.get(0).items.length);
-        assertEquals(3, results.get(0).items[0]);
+        assertEquals(8, results.get(0).support());
+        assertEquals(1, results.get(0).items().length);
+        assertEquals(3, results.get(0).items()[0]);
         
-        assertEquals(7, results.get(1).support);
-        assertEquals(1, results.get(1).items.length);
-        assertEquals(2, results.get(1).items[0]);
+        assertEquals(7, results.get(1).support());
+        assertEquals(1, results.get(1).items().length);
+        assertEquals(2, results.get(1).items()[0]);
         
-        assertEquals(3, results.get(6).support);
-        assertEquals(3, results.get(6).items.length);
-        assertEquals(3, results.get(6).items[0]);
-        assertEquals(2, results.get(6).items[1]);
-        assertEquals(1, results.get(6).items[2]);
+        assertEquals(3, results.get(6).support());
+        assertEquals(3, results.get(6).items().length);
+        assertEquals(3, results.get(6).items()[0]);
+        assertEquals(2, results.get(6).items()[1]);
+        assertEquals(1, results.get(6).items()[2]);
         
-        assertEquals(3, results.get(7).support);
-        assertEquals(1, results.get(7).items.length);
-        assertEquals(4, results.get(7).items[0]);
+        assertEquals(3, results.get(7).support());
+        assertEquals(1, results.get(7).items().length);
+        assertEquals(4, results.get(7).items()[0]);
     }
     
     @Test
